3186: Adapt to OMRS 2.4
